src/test/deca/context/valid/return/this_in_method_ok.deca
// Description :
// Retourne this dans méthode de la classe
//
// Resultats :
// ok

class AF { AF f() { return this; } }
