src/test/deca/context/invalid/return/return_boolean_in_int_custom.deca
// Description :
// return d'un boolean dans méthode int
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : type de retour incompatible

class D {
    int f() {
        return true;
    }
}
